Cogumelos page: Fixed spacing and mobile view

--- a/css/cogumelos.css
+++ b/css/cogumelos.css
@@ -260,6 +260,7 @@ button,
   font-family: var(--font-titulo);
   color: var(--ct-verde2);
   font-size: 3.5rem;
+  margin: 15px 0px;
 }
 
 /* Description title */
@@ -269,7 +270,7 @@ button,
   text-align: justify;
   font-weight: 600;
   color: var(--ct-verde);
-
+  margin: 15px 0px;
 }
 
 /* Sub-title of the mushroom text */
@@ -278,16 +279,13 @@ button,
   font-weight: 300;
   font-family: var(--font-text);
   color: var(--ct-laranja);
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
 }
 
 /* Individual paragraphs */
 .cogumelos .container .cogumelo .text p {
-  font-size: clamp(0.5rem, 2vw, 1rem);
+  font-size: clamp(1.4rem, 2vw, 1rem);
   line-height: 1.6;
-  font-weight: 100;
-  text-align: justify;
+  font-weight: 400;
 }
 
 /* Especificidade para inverter a ordem do Cogumelo Juba de Leão */
@@ -333,6 +331,16 @@ button,
     padding-top: 6rem;
   }
 
+  /* Main title of the page */
+  .cogumelos .cog-title {
+    font-size: clamp(3rem, 4vw, 10rem);
+  }
+
+  /* Title of the mushroom text */
+  .cogumelos .container .cogumelo .text h2 {
+    font-size: 2.5rem;
+  }
+
   .cogumelos .container .cogumelo {
     flex-direction: column;
   }
@@ -342,14 +350,20 @@ button,
   }
 
   .cogumelos .container .cogumelo .text {
-    width: 90%;
+    width: 100%;
+    text-align: center;
+    max-width: 90%;
+  }
+
+  .cogumelos .container .cogumelo .text h3{
     text-align: center;
   }
 
-  .cogumelos .container .cogumelo .text h3,
-  .cogumelos .container .cogumelo .text p {
-    text-align: center;
-  }
+  /* Individual paragraphs */
+.cogumelos .container .cogumelo .text p {
+  text-align: start;
+  margin: 0px 15px;
+}
 
   /* In mobile view, all the mushrooms are ordered vertically */
   .cogumelos .container .cogumelo:nth-child(2) {
